--- a/contatct.html
+++ b/contatct.html
@@ -4,14 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Update-->
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>MatthewSegura</h1>
-    <a href="/contatct.html"></a>
-    <p>okay</p>
-    <p>okay</p>
-    <p>okay</p>
+    <h1>Contact page</h1>
 </body>
 </html>
