--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>MatthewSegura</h1>
-    <a href="/contatct.html"></a>
+    <a href="/contatct.html">contact</a>
     <p>okay</p>
     <p>okay</p>
     <p>okay</p>
